# TestModelAlive

./: .gitignore  GUI_DESIGN.md  README.en.md  README.md  index.html  package-lock.json  package.json  test_claude_models.py  test_codex_models.py  tsa_gui.py  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
frontend/: i18n.ts  main.ts  styles.css
lagacy/: GUI_DESIGN.md  README.md  tsa_codex_models.py  tsa_gui.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
